# aiida-gui-workgraph

./: .gitignore  README.md  pyproject.toml
aiida_gui_workgraph/: __init__.py  scheduler.py  workgraph.py
docs/source/: index.rst  installation.rst  quick_start.rst
frontend/: build-plugin.js  package-lock.json  package.json
frontend/src/: SchedulerDetail.js  SchedulerTable.js  WorkGraphItem.tsx  WorkGraphTable.jsx  index.js
